@@ -7,5 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* cleanup of cops url generation
+  THIS CHANGE IS NOT BACKWARDS COMPATIBLE, YOU MUST ADJUST YOUR CODE !
+  - Cop.toString() does not xml-encode anymore (& to &amp etc.)
 * updated jspm library to build.14, added getlib.properties and check.version target to getlib.xml
 
